<resources>
    <string name="app_name">MyCartoonList</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="drawer_menu_main_category">Main</string>
    <string name="drawer_menu_personal_category">Personal</string>
    <string name="drawer_menu_preferences_category">Preferences</string>
    <string name="drawer_menu_settings_option">Setting</string>
    <string name="drawer_menu_profile_option">Profile</string>
    <string name="drawer_menu_login_option">Login</string>
    <string name="drawer_menu_logout_option">Logout</string>
    <string name="drawer_menu_main_list_option">Main List</string>
    <string name="drawer_menu_news_feed_option">News Feed</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_account">Forgot Account ?</string>
    <string name="login_sign_in_button">Sign In</string>
    <string name="login_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_create_account">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_recover_password">Email</string>
    <string name="email_recovery_message_information">Please insert the corresponding email of the account for credential recovery:</string>
    <string name="recover_fragment_recover_button">Recover</string>
    <string name="register_fragment_create_account_subtitle">-Create Account-</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="or">or</string>
    <string name="oops">Oops!</string>
    <string name="oops_no_user_account_detected">Oops! No user account detected.</string>
    <string name="s_profile_greeting">\'s Profile</string>
    <string name="joined_date">Joined Date</string>
    <string name="statistics">Statistics</string>
    <string name="time_spent">Time Spent:</string>
    <string name="mean_score">Mean Score:</string>
    <string name="on_hold">On Hold:</string>
    <string name="dropped">Dropped:</string>
    <string name="planned_to_watch">Planned to Watch:</string>
    <string name="completed">Completed:</string>
    <string name="watching">Watching:</string>
    <string name="cartoon_image">Cartoon_Image</string>
    <string name="score">Score</string>
    <string name="rank">Status</string>
    <string name="nr_of_episodes">Nr. of episodes</string>
    <string name="type">Type</string>
    <string name="aired">Aired</string>
    <string name="source">Source</string>
    <string name="studio">Studio</string>
    <string name="season">Season</string>
    <string name="rating">Rating</string>
    <string name="comments_amp_reviews"><![CDATA[Comments & Reviews]]></string>
    <string name="drawer_menu_my_list">My List</string>
    <string name="title_activity_personal_item">PersonalItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recommandations">Recommandations</string>
    <string name="recommendation">Recommendation</string>
    <string name="select_a_score">Select a score:</string>
    <string name="select_status">Select Status:</string>

</resources>