<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/loginFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginFragment_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_title"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_login_username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_hint_username"
            android:padding="12dp"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginFragment_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_username"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:minWidth="200dp"
            android:padding="12dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginFragment_forgotAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_forgot_account"
            android:textAlignment="textEnd"
            android:textColor="@color/purple_700" />

        <Button
            android:id="@+id/loginFragment_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_forgotAccountButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/login_sign_in_button"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loginFragment_textCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/login_don_t_have_an_account" />

        <TextView
            android:id="@+id/loginFragment_createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginFragment_textCreateAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_create_account"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />
    </RelativeLayout>
</FrameLayout>