<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createAccount.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        >

        <TextView
            android:id="@+id/registerFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/registerFragment_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/register_fragment_create_account_subtitle"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_subTitle"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_login_username_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_hint_username"
            android:padding="12dp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_username"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_recover_password_email"
            android:drawablePadding="10dp"
            android:hint="@string/email_recover_password"
            android:inputType="textEmailAddress"
            android:minWidth="200dp"
            android:padding="12dp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_email"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:minWidth="200dp"
            android:padding="12dp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFragment_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_password"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minWidth="200dp"
            android:padding="12dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerFragment_registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerFragment_confirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>

</FrameLayout>