<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="15dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/commentElement_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_personal_item"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/commentELement_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joined_date"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>


        <TextView
            android:padding="10dp"
            android:id="@+id/commentElement_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_amp_reviews"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>