<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recoverPassword.RecoverPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/recoverFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="180dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/recoverFragment_textInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recoverFragment_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:text="@string/email_recovery_message_information" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recoverFragment_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recoverFragment_textInformation"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:drawableStart="@drawable/ic_recover_password_email"
            android:drawablePadding="10dp"
            android:hint="@string/email_recover_password"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/recoverFragment_recoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recoverFragment_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:text="@string/recover_fragment_recover_button"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>

</FrameLayout>