<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainList.MainListElementFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:id="@+id/mainList_details_image"
                    android:layout_width="200dp"
                    android:layout_height="240dp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/cartoon_image"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="@string/score"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/mainList_details_scoreTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/score"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="@string/rank"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/mainList_details_rankTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rank"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="@string/nr_of_episodes"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/mainList_details_nrEpisodesTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/nr_of_episodes"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:text="@string/type"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/mainList_details_typeTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/type"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>


            <TextView
                android:id="@+id/mainList_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="This is the title"
                android:textColor="@color/purple_700"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mainList_details_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:padding="3dp"
                android:text="Genre1, Genre2, Genre3, Genre4, Genre5"
                android:textAlignment="center"
                android:textSize="18sp" />

            <View
                style="@style/Divider"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="Summary"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mainList_details_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:text="Acesta este un test pentru a observa cum se comporta textul in cazul in care punem o cantitate inumana de rahaturi in tr-un osd ingura linie"
                android:textSize="16sp" />

            <View
                style="@style/Divider"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/aired"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/mainList_details_aired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aired"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/source"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/mainList_details_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/studio"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/mainlist_details_studio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/studio"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/season"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/mainlist_element_season"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/season"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rating"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/mainList_details_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/comments_amp_reviews"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/mainList_details_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                tools:ignore="NestedScrolling" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>